[project]
name = "replicate-proxy"
version = "0.1.0"
description = "Minimal FastAPI OpenAI-compatible chat completions server"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "python-dotenv>=1.0,<2.0",
    "tiktoken>=0.9,<1.0",
    "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9.0",
]
dev = [
    "bandit[toml]>=1.7,<2.0",
    "ruff>=0.11,<1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B104"]
